--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "about-me",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://tkhang1999.github.io/about-me",
+  "homepage": "http://tkhang1999.github.io/about-me/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.0",
     "scrollreveal": "^4.0.9",
     "web-vitals": "^1.1.2"
   },
