complete tests for all components

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     },
     "setupFilesAfterEnv": [
       "<rootDir>/src/tests/setupTests.js"
-    ]
+    ],
+    "testEnvironment": "jsdom"
   }
 }
