--- a/package.json
+++ b/package.json
@@ -42,15 +42,11 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "gh-pages": "^3.2.3",
-    "jest": "^27.5.1",
-    "prettier": "2.4.1"
+    "prettier": "2.4.1",
+    "react-test-renderer": "^16.14.0"
   },
   "jest": {
     "moduleNameMapper": {
