--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "about-me",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://tkhang1999.github.io/about-me/",
+  "homepage": "https://tkhang1999.github.io/about-me/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
