--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,11 +7,8 @@ on:
     branches: [master]
 
 jobs:
-  build:
-    name: Deploy React application to GitHub page
-
+  setup:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -19,13 +16,30 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
       - name: Run tests with coverage
         run: npm run test:coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
 
-      - name: Deploy application
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Build application
+        run: npm run build
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Build and deploy application
         run: |
           git config --global user.name $user_name
           git config --global user.email $user_email
