fix workflow with conditions

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,8 +7,11 @@ on:
     branches: [master]
 
 jobs:
-  setup:
+  build:
+    name: Build React application
+
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -16,30 +19,18 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-  test:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
       - name: Run tests with coverage
         run: npm run test:coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
 
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/master'
-    steps:
-      - name: Build application
-        run: npm run build
+      - name: Predeploy application
+        if: github.ref != 'refs/heads/master'
+        run: npm run predeploy
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/master'
-    steps:
-      - name: Build and deploy application
+      - name: Deploy application
+        if: github.ref == 'refs/heads/master'
         run: |
           git config --global user.name $user_name
           git config --global user.email $user_email
