--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "^5.0.1",
     "react-toggle": "^4.1.2",
-    "scrollreveal": "^4.0.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "gh-pages": "^3.2.3",
