--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "gh-pages": "^5.0.0",
     "prettier": "2.4.1",
-    "react-test-renderer": "^16.14.0"
+    "react-test-renderer": "^16.14.0",
+    "cheerio": "=1.0.0-rc.3"
   },
   "jest": {
     "moduleNameMapper": {
@@ -57,6 +58,7 @@
       "\\.(css|less)$": "<rootDir>/src/tests/styleMock.js"
     },
     "setupFilesAfterEnv": [
+      "<rootDir>/src/tests/setup-jest.js",
       "<rootDir>/src/tests/setupTests.js"
     ],
     "testEnvironment": "jsdom"
