--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
     "gh-pages": "^6.2.0",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.4.1",
     "react-test-renderer": "^18.3.1"
   },
