--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
-    "react-toggle": "^4.1.2",
+    "react-toggle": "^4.1.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -41,9 +41,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -51,7 +51,8 @@
     "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "3.4.1",
+    "prettier": "3.4.2",
+    "react-intersection-observer": "^9.14.0",
     "react-test-renderer": "^18.3.1"
   },
   "jest": {
